--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,25 @@
 [package]
+authors = ["Steve Pryde <steve@stevepryde.com>"]
+description = "A simple client for various AI LLMs"
 edition = "2021"
-name = "ai-client"
+homepage = "https://github.com/stevepryde/ai-client"
+license = "MIT OR Apache-2.0"
+name = "ai_client"
+repository = "https://github.com/stevepryde/ai-client"
 version = "0.1.0"
+
+keywords = [
+  "ai",
+  "llm",
+  "gemini",
+  "client",
+]
+readme = "README.md"
+
+[features]
+default = ["rustls-tls"]
+native-tls = ["reqwest/native-tls"]
+rustls-tls = ["reqwest/rustls-tls"]
 
 [dependencies]
 reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
@@ -9,4 +27,3 @@ serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 serde_with = "3"
 thiserror = "1"
-# tokio = {version = "1", features = ["full"]}
