--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ homepage = "https://github.com/stevepryde/ai-client"
 license = "MIT OR Apache-2.0"
 name = "ai_client"
 repository = "https://github.com/stevepryde/ai-client"
-version = "0.1.0"
+version = "0.1.1"
 
 keywords = [
   "ai",
@@ -29,6 +29,7 @@ serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 serde_with = "3"
 thiserror = "1"
+tracing = "0.1"
 
 futures = {version = "0.3", optional = true}
-reqwest-streams = {version = "0.6", features = ["json"], optional = true}
+reqwest-streams = {version = "0.7", features = ["json"], optional = true}
