--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,9 @@ homepage = "https://github.com/stevepryde/ai-client"
 license = "MIT OR Apache-2.0"
 name = "ai_client"
 repository = "https://github.com/stevepryde/ai-client"
-version = "0.1.1"
+version = "0.1.2"
 
-keywords = [
-  "ai",
-  "llm",
-  "gemini",
-  "client",
-]
+keywords = ["ai", "llm", "gemini", "client"]
 readme = "README.md"
 
 [features]
@@ -24,12 +19,12 @@ stream = ["reqwest-streams", "futures"]
 
 [dependencies]
 base64 = "0.22"
-reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
-serde = {version = "1", features = ["derive"]}
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_with = "3"
 thiserror = "1"
 tracing = "0.1"
 
-futures = {version = "0.3", optional = true}
-reqwest-streams = {version = "0.7", features = ["json"], optional = true}
+futures = { version = "0.3", optional = true }
+reqwest-streams = { version = "0.7", features = ["json"], optional = true }
